--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -14,7 +14,7 @@
     <li class="nav-item dropdown" dropdown placement="bottom right">
       <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"
         dropdownToggle (click)="false">
-        <img src="assets/man.png" class="img-avatar" alt="admin@bootstrapmaster.com" />
+        <img src="assets/man.png" class="img-avatar" alt="" />
       </a>
       <div class="dropdown-menu dropdown-menu-right" *dropdownMenu aria-labelledby="simple-dropdown">
         <div class="dropdown-header text-center"><strong>Account</strong></div>
@@ -43,6 +43,6 @@
   </app-aside>
 </div>
 <app-footer>
-  <span class="ml-auto"><a href="https://coreui.io/pro/angular/">CoreUI Pro</a> &copy; 2018 creativeLabs.</span>
+  <span class="ml-auto"><a href="https://coreui.io/pro/angular/">ParQR</a> &copy; 2019 ParQR.</span>
   <!-- <span class="ml-auto">Powered by <a href="https://coreui.io/pro/angular">CoreUI Pro for Angular</a></span> -->
 </app-footer>
