--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,6 +1,7 @@
 <div class="animated fadeIn">
   <br>
   <h2 class="text-center">Parking Guidance System</h2><br>
+  <!-- <button routerLink="details">Test</button> -->
   <div class="card">
     <div class="card-body">
       <h4 class="card-title clearfix mb-0">Jumlah Semua Data</h4>
